# Hentoid

./: .gitignore  README-ru.md  README-uk.md  README.md  build.gradle  build.gradle.kts  circle.yml  gradle.properties  lint.xml  settings.gradle  settings.gradle.kts  update.json
.cache/: cache.json
.github/: CONTRIBUTING.md  CONTRIBUTING_DOCUMENTATION.md  FUNDING.yml  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  REPORTING_GUIDELINES.md
.proguard/: proguard-7zip.pro  proguard-classgraph.pro  proguard-eventbus-2.pro  proguard-eventbus-3.pro  proguard-glide-webp.pro  proguard-glide.pro  proguard-google-analytics.pro  proguard-jsoup.pro  proguard-moshi.pro  proguard-objectbox.pro  proguard-okhttp.pro  proguard-retrofit.pro  proguard-rx-java.pro  proguard-sqlite.pro  proguard-square-okhttp3.pro  proguard-square-okio.pro  proguard-submarine.pro  proguard-support-design.pro  proguard-support-v7-appcompat.pro  proguard-support-v7-cardview.pro
ThinDownloadManager/: build.gradle  gradle.properties
about-config/: custom_enchant_mapping.prop  custom_license_mappings.prop  custom_name_mappings.prop
app/: build.gradle  build_BACKUP_265.gradle  build_REMOTE_265.gradle  google-services.json  proguard-android-optimize.txt  proguard-android.txt  proguard-project-app.pro  proguard-rules-debug.pro  proguard-rules-release.pro  proguard-rules-test.pro  proguard-rules.pro  update.json  update_BACKUP_33392.json
app/ai-upscale/src/main/cpp/: CMakeLists.txt  Utils.h  ai_upscale.cpp  ai_upscaler.cpp  filesystem_utils.h  realcugan.cpp  realcugan.h  realcugan_4x_postproc.comp.hex.h  realcugan_4x_postproc_tta.comp.hex.h  realcugan_postproc.comp.hex.h  realcugan_postproc_tta.comp.hex.h  realcugan_preproc.comp.hex.h  realcugan_preproc_tta.comp.hex.h  stb_image.h  stb_image_write.h  upscale_engine.cpp  upscale_engine.h
(+2582 files in other folders)
